# Haskell-BLAKE

./: .gitignore  LICENSE  Main.hs  README  Tests.hs  bench.sh  blake.hs  blakelib.cabal  blakesum.cabal  build.bash  build.bat  profile.bash  tests.bat
Data/Digest/: BLAKE.hs
Data/Digest/SHA3/Candidate/: BLAKE.hs
SHA3/: BLAKE.hs
Tests/: Main.hs
blakesum/: blakesum.cabal.new
blakesum-demo/: Main.hs  blakesum-demo.cabal  profile.bash
blakesum/Data/Digest/BLAKE/: Unsafe.hs
blakesum/Tests/: Bench.hs  Main.hs
demo/: Main.hs  profile.bash
test/: Main.hs
