Name:                blakelib
Version:             0.0
Synopsis:            The BLAKE SHA-3 candidate hashes, in Haskell
Description:         
    .
    An implementation of the BLAKE SHA-3 candidate hash algorithms in Haskell,
    including BLAKE-256, BLAKE-512, BLAKE-224, and BLAKE-384.
    .
    NIST SHA-3:
        http://en.wikipedia.org/wiki/NIST_hash_function_competition
    .
    The BLAKE proposal: 
        http://131002.net/blake/blake.pdf
    .
Category:            Data
License:             BSD3
License-file:        LICENSE
Author:              Kevin Cantu <me@kevincantu.org>
Maintainer:          Kevin Cantu <me@kevincantu.org>
Copyright:           2011 Kevin Cantu
Homepage:            https://github.com/killerswan/Haskell-BLAKE
Bug-reports:         https://github.com/killerswan/Haskell-BLAKE/issues
Build-Type:          Simple
Cabal-Version:       >=1.2

Library
   Build-Depends:    base, parallel, vector, bytestring
   Exposed-modules:  Data.Digest.SHA3.Candidate.BLAKE
   ghc-options:      -Wall  
