name:                blakelib
version:             0.0
synopsis:            The BLAKE SHA-3 candidate hashes, in Haskell
description:         
    .
    This provides an implementation of the BLAKE SHA-3 candidate hash algorithms
    in Haskell, including BLAKE-256, BLAKE-512, BLAKE-224, and BLAKE-384.
    .
    The current version could use a speed boost or two, so be careful.
    .
    Based on the BLAKE proposal, here: http:\/\/131002.net\/blake\/blake.pdf
    .
category:            Data
license:             BSD3
license-file:        LICENSE
author:              Kevin Cantu <me@kevincantu.org>
maintainer:          Kevin Cantu <me@kevincantu.org>
copyright:           2011 Kevin Cantu
source-repository:   https://github.com/killerswan/Haskell-BLAKE
bug-reports:         https://github.com/killerswan/Haskell-BLAKE/issues
build-type:          Simple
cabal-version:       >=1.2

library
   build-bepends:    base >= 4 && < 5, vector >= 0 && < 1, bytestring >= 0 && < 1
   exposed-modules:  Data.Digest.SHA3.Candidate.BLAKE
   ghc-options:      -Wall  
